<resources>
    <string name="app_name">Emergency LLP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="signup_text">SignUp</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_an_account">Already Have an Account?</string>
    <string name="OTP">OTP Verification</string>
    <string name="txt_OTP">You will receive a verification OTP on this numbers</string>
    <string name="btn_send_otp">Send OTP</string>
    <string name="otp_sent_text">Enter the OTP sent to your numbers</string>
    <string name="otp_not_receive">Didn\'t receive OTP?</string>
    <string name="otp_resend">Resend OTP</string>
    <string name="otp_verify_btn">Verify OTP</string>
    <string name="who_are_you">Who are You?</string>
    <string name="fleet_owner">Fleet Owner\n</string>
    <string name="driver">Driver</string>
    <string name="text_next">Next</string>
    <string name="documents_text">Documents:-</string>
    <string name="aadharno_text">Aadhaar No.</string>
    <string name="type_here_text">Type here</string>
    <string name="registration_successfull_text">Registration Successful!!!</string>
    <string name="vehicle_no_text">Vehicle No</string>
    <string name="driver_id">Driver ID</string>
    <string name="home_text">Home</string>
    <string name="ambulance_fleet">Ambulance</string>
    <string name="notification_text">Notification</string>
    <string name="profile_text">Profile</string>
    <string name="no_of_ambulance_registered">You have \t \t \t ambulance registered</string>
    <string name="add_ambulance_text">TAP TO ADD AMBULANCE</string>
    <string name="ambulance_type_text">Ambulance Type</string>
    <string name="advance_life_support_text">Advanced Life Support</string>
    <string name="basic_life_support">Basic Life Support</string>
    <string name="mortuary_transport">Mortuary/Transport</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="eg_bolero_traveller_etc">Eg. Bolero, Traveller etc</string>
    <string name="cancel_text">CANCEL</string>
    <string name="add_text">ADD</string>
    <string name="name_of_driver">Name of Driver</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="age">Age</string>
    <string name="profile_picture">profile picture</string>
    <string name="earning_driver">Earning</string>
    <string name="swap_driver">Swap</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email_username">Email/Username</string>
    <string name="gmailend_text">\@gmail.com</string>
    <string name="continue_text">Continue</string>
    <string name="get_otp_text">Get OTP</string>
    <string name="enter_mobile_number_text">Enter Mobile Number</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="send_verification_code_text">We have sent a verification code to your Mobile Number</string>
    <string name="didn_t_recieve_the_otp_text">Didn\'t Receive OTP?</string>
    <string name="resend_otp_text">Resend OTP</string>
    <string name="verify">Verify</string>
    <string name="information_text">Who are you?</string>
    <string name="upload_aadhar_photo_text">Upload aadhaar photo</string>
    <string name="finish">Finish</string>
    <string name="go_to_dashboard">Go to Dashboard</string>
    <string name="otp_send_text">We will send you an One Time Password on this mobile numbers</string>
    <string name="off_duty_text">Off Duty</string>
    <string name="on_duty_text">On Duty</string>
    <string name="go_to_text">Go to</string>
    <string name="history_text">History</string>
    <string name="extended_fab_content_desc">Change Ambulance</string>
    <string name="extended_fab_label">Change Ambulance</string>
    <string name="add_an_ambulance">Add an Ambulance</string>
    <string name="add_a_photo_of_ambulance">Add a photo of ambulance</string>
    <string name="cancel">Cancel</string>
    <string name="personal_detail_text">Personal Details</string>
    <string name="ambulance_documents_detail_text"><![CDATA[Ambulance & Document Details]]></string>
    <string name="select_ambulance_text">Select Ambulance</string>
    <string name="aadhaar_no_of_driver_text">Driver\'s Aadhaar Number</string>
    <string name="choose_file_text">Choose a file</string>
    <string name="no_file_chosen_text">No file chosen</string>
    <string name="upload_licence_photo_text">Upload photo of Driver\'s License</string>
    <string name="assign_ride_text">Assign Ride</string>
    <string name="about_ambulance_text">About Ambulance</string>
    <string name="ambulance_on_ride_text">This Ambulance is on a ride!</string>
    <string name="book_ride_text">Book a Ride</string>
    <string name="customer_name_text"><b>Customer Name:</b> %1$s</string>
    <string name="customer_age_text"><b>Customer Age:</b> %1$s</string>
    <string name="estimated_price_text">Estimated Price</string>
    <string name="is_this_an_emergency_ride_text">Is this an emergency ride?</string>
    <string name="street_address">Street Address</string>
    <string name="landmark">Landmark, Apt etc. (Optional)</string>
    <string name="city_text">City</string>
    <string name="address_state">State</string>
    <string name="address_pin_code">Pin code</string>
    <string name="enter_customer_information">Enter Customer Information</string>
    <string name="enter_pickup_location">Enter Pickup Location</string>
    <string name="back">Back</string>
    <string name="enter_drop_location">Enter Drop Location</string>
    <string name="book_ride">Book Ride</string>
    <string name="tap_to_select_a_driver">Tap to select a driver</string>
    <string name="emergency_ride_text">This is Emergency Ride</string>
    <string name="new_request_text">New Request</string>
    <string name="decline_text">Decline</string>
    <string name="accept_text">Accept</string>
    <string name="customer_mobile">Customer Mobile</string>
    <string name="pickup_location"><b>Pickup</b> Location: %1$s</string>
    <string name="drop_location_text"><b>Drop Location:</b> %1$s</string>
    <string name="mobileno_text"><b>Mobile Number:</b> %1$s</string>
    <string name="this_is_emergency_ride_text">This is an Emergency Ride!</string>
    <string name="navigate_text">Navigate</string>
    <string name="end_ride_text">End Ride</string>
    <string name="eta_text">ETA: %1$s</string>
    <string name="pickup_complete">Pickup Complete</string>
    <string name="current_date">Today, %1$s</string>
    <string name="ride_count">%1$d Rides</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_age">Customer Age</string>
    <string name="driver_earning">Rs. %1$.2f</string>
    <string name="vehicle_type_text">Vehicle Type</string>
    <string name="vehicle_number_text">Vehicle Number</string>
    <string name="delete">Delete</string>
    <string name="date_text">Date</string>
    <string name="trip_earning">+%1$s</string>
    <string name="history_timestamp">%1$s | %2$s</string>
</resources>