<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    >

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="422dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@+id/guideline18"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline16">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_50sdp"
                android:text="@string/ambulance_type_text"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/ambulance_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_45sdp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/advance_life_support"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="start"
                    android:buttonTint="@color/primary"
                    android:text="@string/advance_life_support_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp" />

                <RadioButton
                    android:id="@+id/basic_life_support"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="start"
                    android:buttonTint="@color/primary"
                    android:text="@string/basic_life_support"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp" />


                <RadioButton
                    android:id="@+id/transport"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="start"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:buttonTint="@color/primary"
                    android:text="@string/mortuary_transport"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp" />

            </RadioGroup>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_70sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:text="@string/vehicle_no_text"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/vehicle_number"
                android:layout_width="@dimen/_230sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_25sdp"
                android:background="@drawable/input_background"
                android:hint="@string/type_here_text"
                android:paddingStart="@dimen/_20sdp"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_70sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:text="@string/vehicle_type"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/vehicle_type"
                android:layout_width="@dimen/_230sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_100sdp"
                android:background="@drawable/input_background"
                android:hint="@string/eg_bolero_traveller_etc"
                android:paddingStart="@dimen/_20sdp"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingBottom="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="start"
            android:background="@drawable/btn_background"
            android:backgroundTint="@color/white"
            android:shadowColor="@color/black"
            android:shadowDx="100"
            android:shadowDy="100"
            android:text="@string/cancel_text"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_ambulance_btn"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/_80sdp"
            android:background="@drawable/btn_background"
            android:text="@string/add_text"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp" />

    </LinearLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />


    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/add_ambulance_progressbar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:indeterminate="true"
        app:indicatorColor="@color/primary"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
