<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,2:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline11"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/_40sdp"
            android:text="@string/who_are_you"
            android:textColor="@color/black"
            android:textSize="@dimen/_25ssp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_choose_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/_60sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_100sdp">

            <RadioButton
                app:buttonTint="@color/primary"
                android:id="@+id/fleet"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:text="@string/fleet_owner"
                android:textColor="@color/black"
                android:textSize="@dimen/_22ssp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/driver"
                app:buttonTint="@color/primary"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:text="@string/driver"
                android:textColor="@color/black"
                android:textSize="@dimen/_22ssp"
                android:textStyle="bold"/>
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next_btn"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/_40sdp"
            android:background="@drawable/btn_background"
            android:text="@string/text_next"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"

            />


    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

</androidx.constraintlayout.widget.ConstraintLayout>